Extend sample app with new scenarios

--- a/Samples/MauiSampleApp/Views/MainPage.xaml
+++ b/Samples/MauiSampleApp/Views/MainPage.xaml
@@ -40,15 +40,21 @@
             <Entry
                 x:Name="PageEntry"
                 Placeholder="Page"
-                Text="MainPage" />
+                Text="DetailPage1" />
             <Button
                 Command="{Binding NavigateToPageCommand}"
                 CommandParameter="{Binding Source={x:Reference PageEntry}, Path=Text}"
                 Text="Navigate to page"
                 HorizontalOptions="Fill" />
+
             <Button
                 Command="{Binding ShowPopupCommand}"
                 Text="Show popup"
+                HorizontalOptions="Fill" />
+
+            <Button
+                Command="{Binding GoBackCommand}"
+                Text="Go back"
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
