Updating how to get window resembling how to get window in Prism

--- a/Samples/MauiSampleApp/Views/ContextMenuPopupPage.xaml
+++ b/Samples/MauiSampleApp/Views/ContextMenuPopupPage.xaml
@@ -47,7 +47,7 @@
 
                 <Button
                     Margin="10,5"
-                    Command="{Binding GoBackCommand}"
+                    Command="{Binding LoginCommand}"
                     Text="Login"
                     HorizontalOptions="Fill"
                     VerticalOptions="EndAndExpand" />
